--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -19,7 +19,7 @@
 
 \usepackage{subfiles} % Best loaded last in the preamble
 
-\title{Rapport Sokoban}
+\title{Rapport Cat}
 \author{ }
 \date{ }
 
