--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -34,7 +34,7 @@
         \newcommand{\HRule}{\rule{\linewidth}{0.3mm}}
         % Title
         \HRule \\[0.3cm]
-        { \LARGE \bfseries Sokoban \\[0.3cm]}
+        { \LARGE \bfseries Cat \\[0.3cm]}
         { \LARGE \bfseries Rapport de projet \\[0.1cm]} % Commenter si pas besoin
         \HRule \\[1.5cm]
         
